# weberta

./: .gitignore  LICENSE  commands.py  data.py  main.py  model.py  parameters.py  pyproject.toml  readme.org  scratchpad.py  trainer.py
experiments/: e0.sh
